chabuildlyParser.js
// Generated from chabuildly.g4 by ANTLR 4.5
// jshint ignore: start
var antlr4 = require('antlr4/index');
var chabuildlyListener = require('./chabuildlyListener').chabuildlyListener;
var grammarFileName = "chabuildly.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'start'", "'{'", "'}'", "'end'", "'function'",
                     "':'", "'var'", "';'", "'if'", "'elif'", "'else'",
                     "'print'", "'less?'", "'greater?'", "'equals?'", "'different?'",
                     "'true'", "'false'", "'params'", "'('", "','", "')'",
                     "'number'", "'string'", "'bool'", "'repeat'", "'while'",
                     "'+'", "'-'", "'*'", "'/'", "'not'", "'set'", "'='",
                     "'return'", "'call'", "'list'", "'id'", "'add'", "'remove'",
                     "'and'", "'or'", "'draw'", "'shape'", "'color'", "'point-width'",
                     "'line'", "'from'", "'to'", "'polygon'", "'with'",
                     "'points'", "'circle'", "'at'", "'radius'", "'rectangle'",
                     "'width'", "'height'", "'point'", "'x'", "'y'", "'background'",
                     "'random'", "'min:'", "'max:'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null',
                      'null', 'null', 'null', 'null', 'null', 'null', 'null',
                      'null', 'null', 'null', 'null', 'null', 'null', 'null',
                      'null', 'null', 'null', 'null', 'null', 'null', 'null',
                      'null', 'null', 'null', 'null', 'null', 'null', 'null',
                      'null', 'null', 'null', 'null', 'null', 'null', 'null',
                      'null', 'null', 'null', 'null', 'null', 'null', 'null',
                      'null', 'null', 'null', 'null', 'null', 'null', 'null',
                      'null', 'null', 'null', 'null', 'null', 'null', 'null',
                      'null', 'null', 'null', "ID", "NUMBER", "STRING" ];

var ruleNames =  [ "program", "mainFunction", "function", "vars", "block",
                   "statement", "conditional", "write", "expression", "bExpression",
                   "params", "type", "loop", "exp", "term", "factor", "assignment",
                   "returnStmt", "funcCall", "cte", "list", "listStmt",
                   "boolOp", "drawingStmts", "drwShape", "shape", "line",
                   "polygon", "circle", "rectangle", "point", "color", "back",
                   "random" ];

var dirProcs = {};
var current = {
   'scope': 'local',
   'id': 'start',
   'type':'void',
   'params':[],
};
var curType = "";
var curId = "";
var currentVarTable = {};

function chabuildlyParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

chabuildlyParser.prototype = Object.create(antlr4.Parser.prototype);
chabuildlyParser.prototype.constructor = chabuildlyParser;

Object.defineProperty(chabuildlyParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

chabuildlyParser.EOF = antlr4.Token.EOF;
chabuildlyParser.T__0 = 1;
chabuildlyParser.T__1 = 2;
chabuildlyParser.T__2 = 3;
chabuildlyParser.T__3 = 4;
chabuildlyParser.T__4 = 5;
chabuildlyParser.T__5 = 6;
chabuildlyParser.T__6 = 7;
chabuildlyParser.T__7 = 8;
chabuildlyParser.T__8 = 9;
chabuildlyParser.T__9 = 10;
chabuildlyParser.T__10 = 11;
chabuildlyParser.T__11 = 12;
chabuildlyParser.T__12 = 13;
chabuildlyParser.T__13 = 14;
chabuildlyParser.T__14 = 15;
chabuildlyParser.T__15 = 16;
chabuildlyParser.T__16 = 17;
chabuildlyParser.T__17 = 18;
chabuildlyParser.T__18 = 19;
chabuildlyParser.T__19 = 20;
chabuildlyParser.T__20 = 21;
chabuildlyParser.T__21 = 22;
chabuildlyParser.T__22 = 23;
chabuildlyParser.T__23 = 24;
chabuildlyParser.T__24 = 25;
chabuildlyParser.T__25 = 26;
chabuildlyParser.T__26 = 27;
chabuildlyParser.T__27 = 28;
chabuildlyParser.T__28 = 29;
chabuildlyParser.T__29 = 30;
chabuildlyParser.T__30 = 31;
chabuildlyParser.T__31 = 32;
chabuildlyParser.T__32 = 33;
chabuildlyParser.T__33 = 34;
chabuildlyParser.T__34 = 35;
chabuildlyParser.T__35 = 36;
chabuildlyParser.T__36 = 37;
chabuildlyParser.T__37 = 38;
chabuildlyParser.T__38 = 39;
chabuildlyParser.T__39 = 40;
chabuildlyParser.T__40 = 41;
chabuildlyParser.T__41 = 42;
chabuildlyParser.T__42 = 43;
chabuildlyParser.T__43 = 44;
chabuildlyParser.T__44 = 45;
chabuildlyParser.T__45 = 46;
chabuildlyParser.T__46 = 47;
chabuildlyParser.T__47 = 48;
chabuildlyParser.T__48 = 49;
chabuildlyParser.T__49 = 50;
chabuildlyParser.T__50 = 51;
chabuildlyParser.T__51 = 52;
chabuildlyParser.T__52 = 53;
chabuildlyParser.T__53 = 54;
chabuildlyParser.T__54 = 55;
chabuildlyParser.T__55 = 56;
chabuildlyParser.T__56 = 57;
chabuildlyParser.T__57 = 58;
chabuildlyParser.T__58 = 59;
chabuildlyParser.T__59 = 60;
chabuildlyParser.T__60 = 61;
chabuildlyParser.T__61 = 62;
chabuildlyParser.T__62 = 63;
chabuildlyParser.T__63 = 64;
chabuildlyParser.T__64 = 65;
chabuildlyParser.ID = 66;
chabuildlyParser.NUMBER = 67;
chabuildlyParser.STRING = 68;

chabuildlyParser.RULE_program = 0;
chabuildlyParser.RULE_mainFunction = 1;
chabuildlyParser.RULE_function = 2;
chabuildlyParser.RULE_vars = 3;
chabuildlyParser.RULE_block = 4;
chabuildlyParser.RULE_statement = 5;
chabuildlyParser.RULE_conditional = 6;
chabuildlyParser.RULE_write = 7;
chabuildlyParser.RULE_expression = 8;
chabuildlyParser.RULE_bExpression = 9;
chabuildlyParser.RULE_params = 10;
chabuildlyParser.RULE_type = 11;
chabuildlyParser.RULE_loop = 12;
chabuildlyParser.RULE_exp = 13;
chabuildlyParser.RULE_term = 14;
chabuildlyParser.RULE_factor = 15;
chabuildlyParser.RULE_assignment = 16;
chabuildlyParser.RULE_returnStmt = 17;
chabuildlyParser.RULE_funcCall = 18;
chabuildlyParser.RULE_cte = 19;
chabuildlyParser.RULE_list = 20;
chabuildlyParser.RULE_listStmt = 21;
chabuildlyParser.RULE_boolOp = 22;
chabuildlyParser.RULE_drawingStmts = 23;
chabuildlyParser.RULE_drwShape = 24;
chabuildlyParser.RULE_shape = 25;
chabuildlyParser.RULE_line = 26;
chabuildlyParser.RULE_polygon = 27;
chabuildlyParser.RULE_circle = 28;
chabuildlyParser.RULE_rectangle = 29;
chabuildlyParser.RULE_point = 30;
chabuildlyParser.RULE_color = 31;
chabuildlyParser.RULE_back = 32;
chabuildlyParser.RULE_random = 33;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.mainFunction = function() {
    return this.getTypedRuleContext(MainFunctionContext,0);
};

ProgramContext.prototype.function = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FunctionContext);
    } else {
        return this.getTypedRuleContext(FunctionContext,i);
    }
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitProgram(this);
	}
};




chabuildlyParser.ProgramContext = ProgramContext;

chabuildlyParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, chabuildlyParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===chabuildlyParser.T__4) {
            this.state = 68;
            this.function();
            this.state = 73;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 74;
        this.mainFunction();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MainFunctionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_mainFunction;
    return this;
}

MainFunctionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MainFunctionContext.prototype.constructor = MainFunctionContext;

MainFunctionContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

MainFunctionContext.prototype.vars = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarsContext);
    } else {
        return this.getTypedRuleContext(VarsContext,i);
    }
};

MainFunctionContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterMainFunction(this);
	}
};

MainFunctionContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitMainFunction(this);
	}
};




chabuildlyParser.MainFunctionContext = MainFunctionContext;

chabuildlyParser.prototype.mainFunction = function() {

    var localctx = new MainFunctionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, chabuildlyParser.RULE_mainFunction);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this.match(chabuildlyParser.T__0);
        var procedure = {
          'name': "start",
          'type': 'void',
        }
        addProc("start", procedure);
        this.state = 77;
        this.match(chabuildlyParser.T__1);
        this.state = 81;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===chabuildlyParser.T__6 || _la===chabuildlyParser.T__36) {
            this.state = 78;
            this.vars();
            this.state = 83;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 84;
        this.block();
        this.state = 85;
        this.match(chabuildlyParser.T__2);
        this.state = 86;
        this.match(chabuildlyParser.T__3);
        initializeAgain();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FunctionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_function;
    return this;
}

FunctionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionContext.prototype.constructor = FunctionContext;

FunctionContext.prototype.ID = function() {
    return this.getToken(chabuildlyParser.ID, 0);
};

FunctionContext.prototype.params = function() {
    return this.getTypedRuleContext(ParamsContext,0);
};

FunctionContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

FunctionContext.prototype.vars = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarsContext);
    } else {
        return this.getTypedRuleContext(VarsContext,i);
    }
};

FunctionContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterFunction(this);
	}
};

FunctionContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitFunction(this);
	}
};




chabuildlyParser.FunctionContext = FunctionContext;

chabuildlyParser.prototype.function = function() {

    var localctx = new FunctionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, chabuildlyParser.RULE_function);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 88;
        this.match(chabuildlyParser.T__4);
        this.state = 89;
        this.match(chabuildlyParser.ID);
        this.state = 90;
        this.match(chabuildlyParser.T__5);
        this.state = 91;
        this.params();
        this.state = 92;
        this.match(chabuildlyParser.T__1);
        this.state = 96;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===chabuildlyParser.T__6 || _la===chabuildlyParser.T__36) {
            this.state = 93;
            this.vars();
            this.state = 98;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 99;
        this.block();
        this.state = 100;
        this.match(chabuildlyParser.T__2);
        this.state = 101;
        this.match(chabuildlyParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VarsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_vars;
    return this;
}

VarsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarsContext.prototype.constructor = VarsContext;

VarsContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

VarsContext.prototype.ID = function() {
    return this.getToken(chabuildlyParser.ID, 0);
};

VarsContext.prototype.list = function() {
    return this.getTypedRuleContext(ListContext,0);
};

VarsContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterVars(this);
	}
};

VarsContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitVars(this);
	}
};




chabuildlyParser.VarsContext = VarsContext;

chabuildlyParser.prototype.vars = function() {

    var localctx = new VarsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, chabuildlyParser.RULE_vars);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        switch(this._input.LA(1)) {
        case chabuildlyParser.T__6:
            this.state = 103;
            this.match(chabuildlyParser.T__6);
            this.state = 104;
            this.type();
            this.state = 105;
            curId = this.match(chabuildlyParser.ID);
            if(varIsUnique(curId))
            {
              addLocalVar(curId, curType);
            }else{
              //DUPLICATE_VARIABLE_NAME
            }
            break;
        case chabuildlyParser.T__36:
            this.state = 107;
            this.list();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 110;
        this.match(chabuildlyParser.T__7);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitBlock(this);
	}
};




chabuildlyParser.BlockContext = BlockContext;

chabuildlyParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, chabuildlyParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 112;
        this.match(chabuildlyParser.T__1);
        this.state = 116;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << chabuildlyParser.T__8) | (1 << chabuildlyParser.T__11) | (1 << chabuildlyParser.T__25))) !== 0) || ((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (chabuildlyParser.T__32 - 33)) | (1 << (chabuildlyParser.T__34 - 33)) | (1 << (chabuildlyParser.T__35 - 33)) | (1 << (chabuildlyParser.T__36 - 33)) | (1 << (chabuildlyParser.T__42 - 33)) | (1 << (chabuildlyParser.T__62 - 33)))) !== 0)) {
            this.state = 113;
            this.statement();
            this.state = 118;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 119;
        this.match(chabuildlyParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.conditional = function() {
    return this.getTypedRuleContext(ConditionalContext,0);
};

StatementContext.prototype.assignment = function() {
    return this.getTypedRuleContext(AssignmentContext,0);
};

StatementContext.prototype.write = function() {
    return this.getTypedRuleContext(WriteContext,0);
};

StatementContext.prototype.loop = function() {
    return this.getTypedRuleContext(LoopContext,0);
};

StatementContext.prototype.returnStmt = function() {
    return this.getTypedRuleContext(ReturnStmtContext,0);
};

StatementContext.prototype.funcCall = function() {
    return this.getTypedRuleContext(FuncCallContext,0);
};

StatementContext.prototype.drawingStmts = function() {
    return this.getTypedRuleContext(DrawingStmtsContext,0);
};

StatementContext.prototype.listStmt = function() {
    return this.getTypedRuleContext(ListStmtContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitStatement(this);
	}
};




chabuildlyParser.StatementContext = StatementContext;

chabuildlyParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, chabuildlyParser.RULE_statement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 129;
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            this.state = 121;
            this.conditional();
            break;

        case 2:
            this.state = 122;
            this.assignment();
            break;

        case 3:
            this.state = 123;
            this.write();
            break;

        case 4:
            this.state = 124;
            this.loop();
            break;

        case 5:
            this.state = 125;
            this.returnStmt();
            break;

        case 6:
            this.state = 126;
            this.funcCall();
            break;

        case 7:
            this.state = 127;
            this.drawingStmts();
            break;

        case 8:
            this.state = 128;
            this.listStmt();
            break;

        }
        this.state = 131;
        this.match(chabuildlyParser.T__7);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConditionalContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_conditional;
    return this;
}

ConditionalContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConditionalContext.prototype.constructor = ConditionalContext;

ConditionalContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

ConditionalContext.prototype.block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockContext);
    } else {
        return this.getTypedRuleContext(BlockContext,i);
    }
};

ConditionalContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterConditional(this);
	}
};

ConditionalContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitConditional(this);
	}
};




chabuildlyParser.ConditionalContext = ConditionalContext;

chabuildlyParser.prototype.conditional = function() {

    var localctx = new ConditionalContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, chabuildlyParser.RULE_conditional);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 133;
        this.match(chabuildlyParser.T__8);
        this.state = 134;
        this.expression();
        this.state = 135;
        this.block();
        this.state = 140;
        _la = this._input.LA(1);
        if(_la===chabuildlyParser.T__9) {
            this.state = 136;
            this.match(chabuildlyParser.T__9);
            this.state = 137;
            this.expression();
            this.state = 138;
            this.block();
        }

        this.state = 144;
        _la = this._input.LA(1);
        if(_la===chabuildlyParser.T__10) {
            this.state = 142;
            this.match(chabuildlyParser.T__10);
            this.state = 143;
            this.block();
        }

        this.state = 146;
        this.match(chabuildlyParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WriteContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_write;
    return this;
}

WriteContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WriteContext.prototype.constructor = WriteContext;

WriteContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

WriteContext.prototype.STRING = function() {
    return this.getToken(chabuildlyParser.STRING, 0);
};

WriteContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterWrite(this);
	}
};

WriteContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitWrite(this);
	}
};




chabuildlyParser.WriteContext = WriteContext;

chabuildlyParser.prototype.write = function() {

    var localctx = new WriteContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, chabuildlyParser.RULE_write);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 148;
        this.match(chabuildlyParser.T__11);
        this.state = 151;
        switch(this._input.LA(1)) {
        case chabuildlyParser.T__16:
        case chabuildlyParser.T__17:
        case chabuildlyParser.T__19:
        case chabuildlyParser.T__27:
        case chabuildlyParser.T__28:
        case chabuildlyParser.T__31:
        case chabuildlyParser.T__35:
        case chabuildlyParser.ID:
        case chabuildlyParser.NUMBER:
            this.state = 149;
            this.expression();
            break;
        case chabuildlyParser.STRING:
            this.state = 150;
            this.match(chabuildlyParser.STRING);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_expression;
    return this;
}

ExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionContext.prototype.constructor = ExpressionContext;

ExpressionContext.prototype.bExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BExpressionContext);
    } else {
        return this.getTypedRuleContext(BExpressionContext,i);
    }
};

ExpressionContext.prototype.boolOp = function() {
    return this.getTypedRuleContext(BoolOpContext,0);
};

ExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterExpression(this);
	}
};

ExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitExpression(this);
	}
};




chabuildlyParser.ExpressionContext = ExpressionContext;

chabuildlyParser.prototype.expression = function() {

    var localctx = new ExpressionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, chabuildlyParser.RULE_expression);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 153;
        this.bExpression();
        this.state = 157;
        _la = this._input.LA(1);
        if(_la===chabuildlyParser.T__40 || _la===chabuildlyParser.T__41) {
            this.state = 154;
            this.boolOp();
            this.state = 155;
            this.bExpression();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = chabuildlyParser.RULE_bExpression;
    return this;
}

BExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BExpressionContext.prototype.constructor = BExpressionContext;

BExpressionContext.prototype.exp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpContext);
    } else {
        return this.getTypedRuleContext(ExpContext,i);
    }
};

BExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.enterBExpression(this);
	}
};

BExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof chabuildlyListener ) {
        listener.exitBExpression(this);
	}
};




chabuildlyParser.BExpressionContext = BExpressionContext;

chabuildlyParser.prototype.bExpression = function() {
